# gameboy

./: .clang-format  CMakeLists.txt
.github/workflows/: build_and_test.yml  style.yml
include/: cartridge.h  gbcpu.h  tools.h
src/: cartridge.c  gbcpu.c  instructions.c  opcodes.c  tools.c
tests/: test_cartridge.c  test_cpu.c  test_instructions.c  test_roms.c  test_tools.c
